project(Ling)
cmake_minimum_required(VERSION 2.8)
#aux_source_directory(. SRC_LIST)

add_definitions(
    #-DLING_WITH_LWIP=1
    #-DLWIP_TIMEVAL_PRIVATE=0
    -DLING_WITH_LIBUV=1
    -DHAVE_CONFIG_H

    -Wall
    -Wno-nonnull -std=gnu99
    -fno-omit-frame-pointer
    -fno-stack-protector -U_FORTIFY_SOURCE -ffreestanding
    )

include_directories(
    core/include
    core/arch/posix/include
    core/lib
    core/bignum
    core/lib/pcre
    core/lib/libuv/include
    core/lib/libuv/src
#    core/lib/lwip/src/include
#    core/lib/lwip/src/include/ipv4
#    core/lib/lwip/src/include/ipv6
#    core/lib/lwip/ling
    )

set(SRC_LIST
core/ets.c
core/heap.c
core/ets_alloc.c
core/timers.c
core/bif_sys.c
core/bif_re.c
core/adler32.c
core/proc_util.c
core/bif_unicode.c
core/wait_list.c
core/bif_ling.c
core/bif_outlet.c
core/ol_udp.c
core/ets_hash.c
core/term_util.c
core/stringify_test.c
core/tube.c
core/bits.c
core/decode.c
core/dbg_inst.c
core/ets_match.c
core/stack.c
core/crc32.c
core/cluster.c
core/nalloc.c
core/bif_ets.c
core/list_util.c
core/monitors.c
core/sys_stats.c
core/atoms.c
core/embed.c
core/term_hash.c
core/hash.c
core/strings.c
core/counters.c
core/ling.c
core/bif_list.c
core/catch_tab.c
core/preload/literals.c
core/gdb_inst.c
core/gc_opt.c
core/stringify.c
core/ol_vif.c
core/map_util.c
core/outlet.c
core/mixed.c
core/ol_console.c
core/array.c
core/mathom.c
core/ling_main.c
core/bif_crypto.c
core/ets_copy.c
core/bif_binary.c
core/proc_queue.c
core/bif_hash.c
core/ol_echo.c
core/bif_generic.c
core/ol_inet.c
core/snprintf.c
core/gcoll.c
core/ol_tcp.c
core/compare.c
core/prof.c
core/ext_term.c
core/scheduler.c
#core/arch/xen/arch_time.c
#core/arch/xen/grant.c
#core/arch/xen/bif_pore.c
#core/arch/xen/netfe.c
#core/arch/xen/disk.c
#core/arch/xen/time.c
#core/arch/xen/arch_mm.c
#core/arch/xen/xenstore.c
#core/arch/xen/console.c
#core/arch/xen/mm.c
#core/arch/xen/pore.c
#core/arch/xen/event.c
#core/arch/xen/ser_cons.c
#core/arch/xen/yield.c
#core/arch/xen/poweroff.c
#core/arch/xen/ol_disk.c
core/arch/posix/startup.c
core/arch/posix/netfe.c
core/arch/posix/interrupt.c
core/arch/posix/disk.c
core/arch/posix/time.c
core/arch/posix/console.c
core/arch/posix/mm.c
core/arch/posix/event.c
core/arch/posix/poweroff.c
#core/arch/arm/netfe.c
#core/arch/arm/interrupt.c
#core/arch/arm/disk.c
#core/arch/arm/time.c
#core/arch/arm/console.c
#core/arch/arm/mm.c
#core/arch/arm/event.c
#core/arch/arm/poweroff.c
core/ol_dcons.c
core/mtwist.c
core/code_base.c
core/lib/nettle/rsa2openpgp.c
core/lib/nettle/sha3-256-meta.c
core/lib/nettle/rsa-sha256-sign.c
core/lib/nettle/serpent-meta.c
core/lib/nettle/sha512-meta.c
core/lib/nettle/getopt1.c
core/lib/nettle/des-compat.c
core/lib/nettle/rsa2sexp.c
core/lib/nettle/mini-gmp.c
core/lib/nettle/sec-tabselect.c
core/lib/nettle/hmac-sha512.c
core/lib/nettle/ecc-point-mul.c
core/lib/nettle/ecc-ecdsa-sign.c
core/lib/nettle/pkcs1-rsa-md5.c
core/lib/nettle/ecc-generic-modq.c
core/lib/nettle/arcfour.c
core/lib/nettle/ecc-scalar.c
core/lib/nettle/md2-meta.c
core/lib/nettle/ecc-mod.c
core/lib/nettle/blowfish.c
core/lib/nettle/aes-encrypt.c
core/lib/nettle/hmac.c
core/lib/nettle/buffer-init.c
core/lib/nettle/bignum.c
core/lib/nettle/aes-encrypt-internal.c
core/lib/nettle/rsa-compat.c
core/lib/nettle/rsa-decrypt-tr.c
core/lib/nettle/sha384-meta.c
core/lib/nettle/sha1-compress.c
core/lib/nettle/sec-add-1.c
core/lib/nettle/twofish.c
core/lib/nettle/serpent-decrypt.c
core/lib/nettle/rsa-pkcs1-sign.c
core/lib/nettle/dsa-keygen.c
core/lib/nettle/bignum-random.c
core/lib/nettle/rsa-verify.c
core/lib/nettle/gmp-glue.c
core/lib/nettle/cbc.c
core/lib/nettle/cast128-meta.c
core/lib/nettle/rsa-decrypt.c
core/lib/nettle/aes-decrypt.c
core/lib/nettle/arctwo-meta.c
core/lib/nettle/sec-sub-1.c
#core/lib/nettle/ecc-224.c
core/lib/nettle/pbkdf2.c
core/lib/nettle/dsa-sha256-verify.c
core/lib/nettle/umac96.c
core/lib/nettle/serpent-encrypt.c
core/lib/nettle/cnd-copy.c
core/lib/nettle/sha1-meta.c
core/lib/nettle/pgp-encode.c
core/lib/nettle/umac-nh-n.c
core/lib/nettle/pkcs1-rsa-sha512.c
core/lib/nettle/ctr.c
core/lib/nettle/sexp2dsa.c
core/lib/nettle/dsa.c
core/lib/nettle/rsa-sha512-verify.c
core/lib/nettle/gosthash94.c
core/lib/nettle/ecc-a-to-j.c
core/lib/nettle/rsa-encrypt.c
core/lib/nettle/base16-meta.c
core/lib/nettle/hmac-ripemd160.c
core/lib/nettle/aes-meta.c
core/lib/nettle/pkcs1-decrypt.c
core/lib/nettle/yarrow256.c
core/lib/nettle/aes-set-encrypt-key.c
core/lib/nettle/umac-l3.c
core/lib/nettle/camellia-set-encrypt-key.c
core/lib/nettle/serpent-set-key.c
core/lib/nettle/dsa-sha1-verify.c
core/lib/nettle/ecc-generic-modp.c
#core/lib/nettle/ecc-256.c
core/lib/nettle/base64-decode.c
core/lib/nettle/aes-set-decrypt-key.c
core/lib/nettle/dsa-sha256-sign.c
core/lib/nettle/sexp2bignum.c
core/lib/nettle/dsa-verify.c
core/lib/nettle/umac-nh.c
core/lib/nettle/rsa-md5-verify.c
core/lib/nettle/pkcs1.c
core/lib/nettle/der-iterator.c
core/lib/nettle/sexp-format.c
core/lib/nettle/arcfour-meta.c
core/lib/nettle/bignum-next-prime.c
core/lib/nettle/hmac-sha384.c
core/lib/nettle/umac32.c
core/lib/nettle/pkcs1-rsa-sha1.c
core/lib/nettle/nettle-meta-armors.c
core/lib/nettle/umac-poly64.c
core/lib/nettle/ecdsa-keygen.c
core/lib/nettle/pkcs1-encrypt.c
core/lib/nettle/sha3-256.c
core/lib/nettle/sexp-transport.c
core/lib/nettle/write-be32.c
core/lib/nettle/md5-compress.c
core/lib/nettle/rsa-keygen.c
core/lib/nettle/ecc-modp.c
core/lib/nettle/ecc-dup-jj.c
core/lib/nettle/md5-meta.c
core/lib/nettle/sha256.c
core/lib/nettle/des.c
core/lib/nettle/camellia-table.c
core/lib/nettle/dsa-sign.c
core/lib/nettle/bignum-random-prime.c
core/lib/nettle/hmac-sha1.c
core/lib/nettle/der2rsa.c
core/lib/nettle/cast128.c
core/lib/nettle/rsa-md5-sign.c
core/lib/nettle/gosthash94-meta.c
core/lib/nettle/sha3-224.c
core/lib/nettle/md4.c
core/lib/nettle/ecc-size.c
core/lib/nettle/rsa-pkcs1-sign-tr.c
core/lib/nettle/ecc-add-jja.c
core/lib/nettle/yarrow_key_event.c
core/lib/nettle/sha3-384.c
core/lib/nettle/sexp2rsa.c
core/lib/nettle/ecc-j-to-a.c
core/lib/nettle/sha3-permute.c
core/lib/nettle/umac128.c
core/lib/nettle/hmac-sha224.c
core/lib/nettle/pbkdf2-hmac-sha256.c
core/lib/nettle/rsa-sha1-verify.c
#core/lib/nettle/ecc-192.c
core/lib/nettle/rsa-pkcs1-verify.c
core/lib/nettle/der2dsa.c
core/lib/nettle/md2.c
core/lib/nettle/rsa-sha1-sign.c
core/lib/nettle/ripemd160-compress.c
core/lib/nettle/camellia-meta.c
core/lib/nettle/hmac-sha256.c
core/lib/nettle/sha512.c
core/lib/nettle/pkcs1-rsa-digest.c
core/lib/nettle/arcfour-crypt.c
core/lib/nettle/md5-compat.c
core/lib/nettle/umac-set-key.c
core/lib/nettle/sec-modinv.c
core/lib/nettle/ecc-random.c
core/lib/nettle/sha256-compress.c
core/lib/nettle/sha3.c
core/lib/nettle/sha3-384-meta.c
core/lib/nettle/rsa-sign.c
core/lib/nettle/ecc-modq.c
core/lib/nettle/ecc-hash.c
core/lib/nettle/base16-encode.c
#core/lib/nettle/ecc-521.c
core/lib/nettle/rsa.c
core/lib/nettle/ecc-mul-g.c
core/lib/nettle/pkcs1-rsa-sha256.c
core/lib/nettle/dsa2sexp.c
core/lib/nettle/ecdsa-verify.c
core/lib/nettle/aes-decrypt-internal.c
core/lib/nettle/twofish-meta.c
core/lib/nettle/ecdsa-sign.c
core/lib/nettle/salsa20-set-key.c
#core/lib/nettle/aesdata.c
core/lib/nettle/umac-poly128.c
core/lib/nettle/sha3-512.c
core/lib/nettle/base16-decode.c
core/lib/nettle/sha256-meta.c
core/lib/nettle/camellia-crypt-internal.c
core/lib/nettle/salsa20-core-internal.c
core/lib/nettle/write-le64.c
core/lib/nettle/umac-l2.c
core/lib/nettle/camellia-set-decrypt-key.c
core/lib/nettle/des3.c
core/lib/nettle/nettle-meta-ciphers.c
core/lib/nettle/ecc-add-jjj.c
core/lib/nettle/sha512-compress.c
core/lib/nettle/sexp.c
#core/lib/nettle/ecc-384.c
core/lib/nettle/sexp-transport-format.c
core/lib/nettle/rsa-blind.c
core/lib/nettle/realloc.c
core/lib/nettle/knuth-lfib.c
core/lib/nettle/camellia-crypt.c
core/lib/nettle/md5.c
core/lib/nettle/salsa20-crypt.c
core/lib/nettle/sha224-meta.c
core/lib/nettle/nettle-meta-hashes.c
core/lib/nettle/sha3-224-meta.c
core/lib/nettle/buffer.c
#core/lib/nettle/twofishdata.c
core/lib/nettle/salsa20r12-crypt.c
core/lib/nettle/base64-meta.c
core/lib/nettle/hmac-md5.c
core/lib/nettle/ecc-mul-a.c
core/lib/nettle/memxor.c
core/lib/nettle/gcm-aes.c
core/lib/nettle/arctwo.c
core/lib/nettle/ripemd160.c
core/lib/nettle/md4-meta.c
core/lib/nettle/sha1.c
#core/lib/nettle/eccdata.c
core/lib/nettle/ecc-ecdsa-verify.c
core/lib/nettle/getopt.c
core/lib/nettle/rsa-sha256-verify.c
core/lib/nettle/ripemd160-meta.c
core/lib/nettle/ecc-point.c
core/lib/nettle/rsa-sha512-sign.c
core/lib/nettle/umac64.c
core/lib/nettle/sha3-512-meta.c
core/lib/nettle/aes-encrypt-table.c
core/lib/nettle/nettle-internal.c
core/lib/nettle/write-le32.c
core/lib/nettle/dsa-sha1-sign.c
core/lib/nettle/base64-encode.c
core/lib/nettle/ecc-generic-redc.c
core/lib/nettle/gcm.c
core/lib/nettle/ecc-point-mul-g.c
core/lib/nettle/pbkdf2-hmac-sha1.c
#core/lib/misc/memmove.c
#core/lib/misc/strchrnul.c
#core/lib/misc/pow.c
#core/lib/misc/stpcpy.c
#core/lib/misc/strchr.c
#core/lib/misc/atan.c
#core/lib/misc/floor.c
#core/lib/misc/strtod.c
#core/lib/misc/sinh.c
#core/lib/misc/__cos.c
#core/lib/misc/modf.c
#core/lib/misc/strcpy.c
#core/lib/misc/asin.c
#core/lib/misc/strcat.c
#core/lib/misc/qsort.c
#core/lib/misc/memcmp.c
#core/lib/misc/cosh.c
#core/lib/misc/__tan.c
#core/lib/misc/fabs.c
#core/lib/misc/__rem_pio2.c
#core/lib/misc/acos.c
#core/lib/misc/sin.c
#core/lib/misc/__rem_pio2_large.c
#core/lib/misc/__sin.c
#core/lib/misc/atan2.c
#core/lib/misc/cos.c
#core/lib/misc/log10.c
#core/lib/misc/atof.c
#core/lib/misc/scalbln.c
#core/lib/misc/tan.c
#core/lib/misc/strncmp.c
#core/lib/misc/log.c
#core/lib/misc/sqrt.c
#core/lib/misc/memset.c
#core/lib/misc/expm1.c
#core/lib/misc/exp.c
#core/lib/misc/scalbn.c
#core/lib/misc/strlen.c
#core/lib/misc/tanh.c
#core/lib/misc/__expo2.c
#core/lib/misc/strcmp.c
#core/lib/misc/memcpy.c
core/lib/pcre/pcre_globals.c
core/lib/pcre/pcre_maketables.c
#core/lib/pcre/pcretest.c
core/lib/pcre/pcre_ord2utf8.c
core/lib/pcre/pcre_version.c
core/lib/pcre/pcre_try_flipped.c
core/lib/pcre/pcre_get.c
core/lib/pcre/pcre_ucp_searchfuncs.c
core/lib/pcre/pcreposix.c
#core/lib/pcre/pcredemo.c
core/lib/pcre/pcre_dfa_exec.c
core/lib/pcre/pcre_exec.c
#core/lib/pcre/pcregrep.c
core/lib/pcre/pcre_xclass.c
core/lib/pcre/pcre_config.c
core/lib/pcre/pcre_compile.c
core/lib/pcre/pcre_chartables.c
core/lib/pcre/pcre_refcount.c
core/lib/pcre/pcre_info.c
core/lib/pcre/pcre_fullinfo.c
core/lib/pcre/pcre_study.c
core/lib/pcre/pcre_newline.c
core/lib/pcre/pcre_tables.c
#core/lib/pcre/dftables.c
core/lib/pcre/pcre_valid_utf8.c
core/lib/libuv/src/fs-poll.c
#core/lib/libuv/src/win/signal.c
#core/lib/libuv/src/win/winapi.c
#core/lib/libuv/src/win/stream.c
#core/lib/libuv/src/win/tty.c
#core/lib/libuv/src/win/fs-event.c
#core/lib/libuv/src/win/process.c
#core/lib/libuv/src/win/udp.c
#core/lib/libuv/src/win/process-stdio.c
#core/lib/libuv/src/win/async.c
#core/lib/libuv/src/win/util.c
#core/lib/libuv/src/win/dl.c
#core/lib/libuv/src/win/timer.c
#core/lib/libuv/src/win/fs.c
#core/lib/libuv/src/win/winsock.c
#core/lib/libuv/src/win/core.c
#core/lib/libuv/src/win/pipe.c
#core/lib/libuv/src/win/thread.c
#core/lib/libuv/src/win/poll.c
#core/lib/libuv/src/win/loop-watcher.c
#core/lib/libuv/src/win/getnameinfo.c
#core/lib/libuv/src/win/handle.c
#core/lib/libuv/src/win/req.c
#core/lib/libuv/src/win/getaddrinfo.c
#core/lib/libuv/src/win/error.c
#core/lib/libuv/src/win/tcp.c
core/lib/libuv/src/version.c
core/lib/libuv/src/uv-common.c
core/lib/libuv/src/threadpool.c
core/lib/libuv/src/inet.c
core/lib/libuv/src/unix/signal.c
core/lib/libuv/src/unix/stream.c
core/lib/libuv/src/unix/tty.c
core/lib/libuv/src/unix/process.c
core/lib/libuv/src/unix/udp.c
core/lib/libuv/src/unix/async.c
#core/lib/libuv/src/unix/openbsd.c
core/lib/libuv/src/unix/linux-inotify.c
#core/lib/libuv/src/unix/fsevents.c
#core/lib/libuv/src/unix/kqueue.c
#core/lib/libuv/src/unix/darwin.c
core/lib/libuv/src/unix/linux-syscalls.c
core/lib/libuv/src/unix/dl.c
core/lib/libuv/src/unix/pthread-fixes.c
#core/lib/libuv/src/unix/netbsd.c
core/lib/libuv/src/unix/timer.c
core/lib/libuv/src/unix/linux-core.c
#core/lib/libuv/src/unix/darwin-proctitle.c
core/lib/libuv/src/unix/fs.c
#core/lib/libuv/src/unix/aix.c
core/lib/libuv/src/unix/core.c
core/lib/libuv/src/unix/proctitle.c
core/lib/libuv/src/unix/pipe.c
core/lib/libuv/src/unix/thread.c
core/lib/libuv/src/unix/poll.c
#core/lib/libuv/src/unix/freebsd.c
#core/lib/libuv/src/unix/sunos.c
core/lib/libuv/src/unix/loop.c
core/lib/libuv/src/unix/loop-watcher.c
core/lib/libuv/src/unix/getnameinfo.c
#core/lib/libuv/src/unix/android-ifaddrs.c
core/lib/libuv/src/unix/getaddrinfo.c
core/lib/libuv/src/unix/tcp.c
#core/lib/lwip/src/netif/etharp.c
#core/lib/lwip/src/netif/ppp/magic.c
#core/lib/lwip/src/netif/ppp/vj.c
#core/lib/lwip/src/netif/ppp/chap.c
#core/lib/lwip/src/netif/ppp/fsm.c
#core/lib/lwip/src/netif/ppp/ipcp.c
#core/lib/lwip/src/netif/ppp/pap.c
#core/lib/lwip/src/netif/ppp/chpms.c
#core/lib/lwip/src/netif/ppp/lcp.c
#core/lib/lwip/src/netif/ppp/ppp.c
#core/lib/lwip/src/netif/ppp/md5.c
#core/lib/lwip/src/netif/ppp/randm.c
#core/lib/lwip/src/netif/ppp/auth.c
#core/lib/lwip/src/netif/ppp/ppp_oe.c
#core/lib/lwip/src/netif/slipif.c
#core/lib/lwip/src/netif/ethernetif.c
#core/lib/lwip/src/api/api_lib.c
#core/lib/lwip/src/api/netbuf.c
#core/lib/lwip/src/api/netdb.c
#core/lib/lwip/src/api/sockets.c
#core/lib/lwip/src/api/tcpip.c
#core/lib/lwip/src/api/api_msg.c
#core/lib/lwip/src/api/netifapi.c
#core/lib/lwip/src/api/err.c
#core/lib/lwip/src/core/def.c
#core/lib/lwip/src/core/timers.c
#core/lib/lwip/src/core/sys.c
#core/lib/lwip/src/core/tcp_in.c
#core/lib/lwip/src/core/init.c
#core/lib/lwip/src/core/raw.c
#core/lib/lwip/src/core/udp.c
#core/lib/lwip/src/core/stats.c
#core/lib/lwip/src/core/memp.c
#core/lib/lwip/src/core/snmp/msg_out.c
#core/lib/lwip/src/core/snmp/mib_structs.c
#core/lib/lwip/src/core/snmp/asn1_enc.c
#core/lib/lwip/src/core/snmp/mib2.c
#core/lib/lwip/src/core/snmp/msg_in.c
#core/lib/lwip/src/core/snmp/asn1_dec.c
#core/lib/lwip/src/core/dhcp.c
#core/lib/lwip/src/core/ipv6/ethip6.c
#core/lib/lwip/src/core/ipv6/dhcp6.c
#core/lib/lwip/src/core/ipv6/ip6_frag.c
#core/lib/lwip/src/core/ipv6/icmp6.c
#core/lib/lwip/src/core/ipv6/ip6_addr.c
#core/lib/lwip/src/core/ipv6/inet6.c
#core/lib/lwip/src/core/ipv6/ip6.c
#core/lib/lwip/src/core/ipv6/nd6.c
#core/lib/lwip/src/core/ipv6/mld6.c
#core/lib/lwip/src/core/tcp_out.c
#core/lib/lwip/src/core/dns.c
#core/lib/lwip/src/core/mem.c
#core/lib/lwip/src/core/netif.c
#core/lib/lwip/src/core/inet_chksum.c
#core/lib/lwip/src/core/ipv4/ip4.c
#core/lib/lwip/src/core/ipv4/icmp.c
#core/lib/lwip/src/core/ipv4/autoip.c
#core/lib/lwip/src/core/ipv4/ip4_addr.c
#core/lib/lwip/src/core/ipv4/ip_frag.c
#core/lib/lwip/src/core/ipv4/igmp.c
#core/lib/lwip/src/core/tcp.c
#core/lib/lwip/src/core/pbuf.c
#core/lib/lwip/test/unit/tcp/test_tcp_oos.c
#core/lib/lwip/test/unit/tcp/tcp_helper.c
#core/lib/lwip/test/unit/tcp/test_tcp.c
#core/lib/lwip/test/unit/etharp/test_etharp.c
#core/lib/lwip/test/unit/dhcp/test_dhcp.c
#core/lib/lwip/test/unit/lwip_unittests.c
#core/lib/lwip/test/unit/udp/test_udp.c
#core/lib/lwip/test/unit/core/test_pbuf.c
#core/lib/lwip/test/unit/core/test_mem.c
core/bif_proc.c
core/bignum/mpi.c
core/bignum/bignum.c
core/proc.c
core/netif.c
core/msg_queue.c
core/ol_tcp_acc.c
core/ol_tube.c
core/bif_map.c
core/linc.c
core/unicode.c
core/ets_ordset.c
core/ol_dns.c

core/include/xen/dom0_ops.h
core/include/xen/arch-x86_64.h
core/include/xen/arch-x86_32.h
core/include/xen/xsm/flask_op.h
core/include/xen/hvm/save.h
core/include/xen/hvm/pvdrivers.h
core/include/xen/hvm/ioreq.h
core/include/xen/hvm/hvm_xs_strings.h
core/include/xen/hvm/hvm_info_table.h
core/include/xen/hvm/e820.h
core/include/xen/hvm/params.h
core/include/xen/hvm/hvm_op.h
core/include/xen/nmi.h
core/include/xen/version.h
core/include/xen/event_channel.h
core/include/xen/grant_table.h
core/include/xen/sysctl.h
core/include/xen/arch-arm.h
core/include/xen/arch-x86/hvm/save.h
core/include/xen/arch-x86/xen-x86_32.h
core/include/xen/arch-x86/cpuid.h
core/include/xen/arch-x86/xen-x86_64.h
core/include/xen/arch-x86/xen.h
core/include/xen/arch-x86/xen-mca.h
core/include/xen/features.h
core/include/xen/trace.h
core/include/xen/xencomm.h
core/include/xen/io/pciif.h
core/include/xen/io/ring.h
core/include/xen/io/libxenvchan.h
core/include/xen/io/fsif.h
core/include/xen/io/kbdif.h
core/include/xen/io/blkif.h
core/include/xen/io/vscsiif.h
core/include/xen/io/netif.h
core/include/xen/io/usbif.h
core/include/xen/io/console.h
core/include/xen/io/fbif.h
core/include/xen/io/xenbus.h
core/include/xen/io/protocols.h
core/include/xen/io/tpmif.h
core/include/xen/io/xs_wire.h
core/include/xen/arch-arm/hvm/save.h
core/include/xen/xenoprof.h
core/include/xen/platform.h
core/include/xen/callback.h
core/include/xen/kexec.h
core/include/xen/tmem.h
core/include/xen/xen.h
core/include/xen/physdev.h
core/include/xen/xen-compat.h
core/include/xen/vcpu.h
core/include/xen/memory.h
core/include/xen/mem_event.h
core/include/xen/gcov.h
core/include/xen/elfnote.h
core/include/xen/sched.h
core/include/xen/domctl.h
core/include/msg_queue.h
core/include/mixed.h
core/include/list_util.h
core/include/sockaddr.h
core/include/counters.h
core/include/mm.h
core/include/strings.h
core/include/unicode.h
core/include/getput.h
core/include/wait_list.h
core/include/ets.h
core/include/nalloc.h
core/include/lassert.h
core/include/disk.h
core/include/stack.h
core/include/l_time.h
core/include/snprintf.h
core/include/monitors.h
core/include/dbg_inst.h
core/include/netfe.h
core/include/netif.h
core/include/event.h
core/include/bif.h
core/include/tube.h
core/include/l_limits.h
core/include/ol_inet.h
core/include/mtwist.h
core/include/netmap.h
core/include/adler32.h
core/include/timers.h
core/include/console.h
core/include/bits.h
core/include/outlet.h
core/include/term_util.h
core/include/decode.h
core/include/cluster.h
core/include/heap.h
core/include/proc.h
core/include/hash.h
core/include/bif_impl.h
core/include/sys_stats.h
core/include/ext_term.h
core/include/stringify.h
core/include/proc_queue.h
core/include/catch_tab.h
core/include/crc32.h
core/include/embed.h
core/include/map_util.h
core/include/prof.h
core/include/array.h
core/include/ling_common.h
core/include/xstore.h
core/include/atom_defs.h
core/include/term.h
core/include/code_base.h
core/include/scheduler.h
core/include/atoms.h
core/arch/xen/include/pore.h
core/arch/xen/include/xenstore.h
core/arch/xen/include/arch_time.h
core/arch/xen/include/ser_cons.h
core/arch/xen/include/arch_mm.h
core/arch/xen/include/hypercall-x86_32.h
core/arch/xen/include/arch_console.h
core/arch/xen/include/hypercall-x86_64.h
core/arch/xen/include/ling_xen.h
core/arch/xen/include/os.h
core/arch/xen/include/arch_event.h
core/arch/xen/include/grant.h
core/arch/xen/include/arch_limits.h
core/arch/xen/include/arch_netfe.h
core/arch/posix/include/syscalls.h
core/arch/posix/include/ser_cons.h
core/arch/posix/include/arch_mm.h
core/arch/posix/include/arch_console.h
core/arch/posix/include/os.h
core/arch/posix/include/arch_event.h
core/arch/posix/include/arch_limits.h
core/arch/posix/include/arch_netfe.h
core/arch/arm/include/ser_cons.h
core/arch/arm/include/arch_mm.h
core/arch/arm/include/arch_console.h
core/arch/arm/include/os.h
core/arch/arm/include/arch_event.h
core/arch/arm/include/arch_limits.h
core/arch/arm/include/arch_netfe.h
core/lib/nettle/ctr.h
core/lib/nettle/yarrow.h
core/lib/nettle/nettle-types.h
core/lib/nettle/gcm.h
core/lib/nettle/memxor.h
core/lib/nettle/cast128_sboxes.h
core/lib/nettle/base64.h
core/lib/nettle/macros.h
core/lib/nettle/ripemd160.h
core/lib/nettle/ecc-curve.h
core/lib/nettle/rsa-compat.h
core/lib/nettle/aes-internal.h
core/lib/nettle/gosthash94.h
core/lib/nettle/sha1.h
core/lib/nettle/ecc-internal.h
core/lib/nettle/aes.h
core/lib/nettle/cbc.h
core/lib/nettle/getopt.h
core/lib/nettle/knuth-lfib.h
core/lib/nettle/arctwo.h
core/lib/nettle/prime-list.h
core/lib/nettle/md4.h
core/lib/nettle/sexp.h
core/lib/nettle/nettle-stdint.h
core/lib/nettle/pgp.h
core/lib/nettle/camellia.h
core/lib/nettle/sha3.h
core/lib/nettle/serpent.h
core/lib/nettle/keymap.h
core/lib/nettle/bignum.h
core/lib/nettle/realloc.h
core/lib/nettle/camellia-internal.h
core/lib/nettle/nettle-meta.h
core/lib/nettle/rsa.h
core/lib/nettle/sha2.h
core/lib/nettle/pkcs1.h
core/lib/nettle/md2.h
core/lib/nettle/desinfo.h
core/lib/nettle/nettle-write.h
core/lib/nettle/arcfour.h
core/lib/nettle/umac.h
core/lib/nettle/hmac.h
core/lib/nettle/desCode.h
core/lib/nettle/ecdsa.h
core/lib/nettle/cast128.h
core/lib/nettle/md5-compat.h
core/lib/nettle/mini-gmp.h
core/lib/nettle/ecc.h
core/lib/nettle/base16.h
core/lib/nettle/pbkdf2.h
core/lib/nettle/salsa20.h
core/lib/nettle/rotors.h
core/lib/nettle/config.h
core/lib/nettle/sha.h
core/lib/nettle/gmp-glue.h
core/lib/nettle/asn1.h
core/lib/nettle/twofish.h
core/lib/nettle/nettle-internal.h
core/lib/nettle/des.h
core/lib/nettle/md5.h
core/lib/nettle/serpent-internal.h
core/lib/nettle/dsa.h
core/lib/nettle/blowfish.h
core/lib/nettle/buffer.h
core/lib/nettle/des-compat.h
core/lib/misc/l_libm.h
core/lib/misc/include/stdlib.h
core/lib/misc/include/ctype.h
core/lib/misc/include/string.h
core/lib/misc/include/endian.h
core/lib/misc/include/math.h
core/lib/misc/include/setjmp.h
core/lib/misc/atomic.h
core/lib/misc/libc.h
core/lib/pcre/ucp.h
core/lib/pcre/ucptable.h
core/lib/pcre/pcre.h
core/lib/pcre/ctype.h
core/lib/pcre/pcreposix.h
core/lib/pcre/ucpinternal.h
core/lib/pcre/pcrecpp_internal.h
core/lib/pcre/pcre_scanner.h
core/lib/pcre/config.h
core/lib/pcre/assert.h
core/lib/pcre/pcrecpp.h
core/lib/pcre/pcre_internal.h
core/lib/libuv/include/stdint-msvc2008.h
core/lib/libuv/include/uv-threadpool.h
core/lib/libuv/include/uv-bsd.h
core/lib/libuv/include/tree.h
core/lib/libuv/include/uv-aix.h
core/lib/libuv/include/uv-errno.h
core/lib/libuv/include/android-ifaddrs.h
core/lib/libuv/include/uv.h
core/lib/libuv/include/uv-version.h
core/lib/libuv/include/uv-unix.h
core/lib/libuv/include/uv-win.h
core/lib/libuv/include/uv-linux.h
core/lib/libuv/include/uv-darwin.h
core/lib/libuv/include/uv-sunos.h
core/lib/libuv/include/pthread-fixes.h
core/lib/libuv/src/heap-inl.h
core/lib/libuv/src/win/stream-inl.h
core/lib/libuv/src/win/handle-inl.h
core/lib/libuv/src/win/atomicops-inl.h
core/lib/libuv/src/win/req-inl.h
core/lib/libuv/src/win/internal.h
core/lib/libuv/src/win/winapi.h
core/lib/libuv/src/win/winsock.h
core/lib/libuv/src/queue.h
core/lib/libuv/src/uv-common.h
core/lib/libuv/src/unix/atomic-ops.h
core/lib/libuv/src/unix/internal.h
core/lib/libuv/src/unix/spinlock.h
core/lib/libuv/src/unix/linux-syscalls.h
#core/lib/lwip/src/include/ipv6/lwip/dhcp6.h
#core/lib/lwip/src/include/ipv6/lwip/ethip6.h
#core/lib/lwip/src/include/ipv6/lwip/ip6_addr.h
#core/lib/lwip/src/include/ipv6/lwip/mld6.h
#core/lib/lwip/src/include/ipv6/lwip/ip6.h
#core/lib/lwip/src/include/ipv6/lwip/ip6_frag.h
#core/lib/lwip/src/include/ipv6/lwip/inet6.h
#core/lib/lwip/src/include/ipv6/lwip/nd6.h
#core/lib/lwip/src/include/ipv6/lwip/icmp6.h
#core/lib/lwip/src/include/posix/sys/socket.h
#core/lib/lwip/src/include/posix/netdb.h
#core/lib/lwip/src/include/netif/slipif.h
#core/lib/lwip/src/include/netif/etharp.h
#core/lib/lwip/src/include/netif/ppp_oe.h
#core/lib/lwip/src/include/lwip/snmp_structs.h
#core/lib/lwip/src/include/lwip/netifapi.h
#core/lib/lwip/src/include/lwip/inet_chksum.h
#core/lib/lwip/src/include/lwip/udp.h
#core/lib/lwip/src/include/lwip/memp_std.h
#core/lib/lwip/src/include/lwip/api_msg.h
#core/lib/lwip/src/include/lwip/dns.h
#core/lib/lwip/src/include/lwip/netif.h
#core/lib/lwip/src/include/lwip/pbuf.h
#core/lib/lwip/src/include/lwip/snmp_msg.h
#core/lib/lwip/src/include/lwip/opt.h
#core/lib/lwip/src/include/lwip/netdb.h
#core/lib/lwip/src/include/lwip/tcpip.h
#core/lib/lwip/src/include/lwip/sockets.h
#core/lib/lwip/src/include/lwip/raw.h
#core/lib/lwip/src/include/lwip/snmp.h
#core/lib/lwip/src/include/lwip/timers.h
#core/lib/lwip/src/include/lwip/ip.h
#core/lib/lwip/src/include/lwip/netbuf.h
#core/lib/lwip/src/include/lwip/snmp_asn1.h
#core/lib/lwip/src/include/lwip/init.h
#core/lib/lwip/src/include/lwip/tcp.h
#core/lib/lwip/src/include/lwip/tcp_impl.h
#core/lib/lwip/src/include/lwip/api.h
#core/lib/lwip/src/include/lwip/dhcp.h
#core/lib/lwip/src/include/lwip/mem.h
#core/lib/lwip/src/include/lwip/err.h
#core/lib/lwip/src/include/lwip/debug.h
#core/lib/lwip/src/include/lwip/sio.h
#core/lib/lwip/src/include/lwip/ip_addr.h
#core/lib/lwip/src/include/lwip/stats.h
#core/lib/lwip/src/include/lwip/sys.h
#core/lib/lwip/src/include/lwip/memp.h
#core/lib/lwip/src/include/lwip/def.h
#core/lib/lwip/src/include/lwip/arch.h
#core/lib/lwip/src/include/ipv4/lwip/ip_frag.h
#core/lib/lwip/src/include/ipv4/lwip/ip4.h
#core/lib/lwip/src/include/ipv4/lwip/igmp.h
#core/lib/lwip/src/include/ipv4/lwip/inet.h
#core/lib/lwip/src/include/ipv4/lwip/autoip.h
#core/lib/lwip/src/include/ipv4/lwip/icmp.h
#core/lib/lwip/src/include/ipv4/lwip/ip4_addr.h
#core/lib/lwip/src/netif/ppp/randm.h
#core/lib/lwip/src/netif/ppp/lcp.h
#core/lib/lwip/src/netif/ppp/pap.h
#core/lib/lwip/src/netif/ppp/vj.h
#core/lib/lwip/src/netif/ppp/chpms.h
#core/lib/lwip/src/netif/ppp/ipcp.h
#core/lib/lwip/src/netif/ppp/magic.h
#core/lib/lwip/src/netif/ppp/pppdebug.h
#core/lib/lwip/src/netif/ppp/fsm.h
#core/lib/lwip/src/netif/ppp/ppp.h
#core/lib/lwip/src/netif/ppp/chap.h
#core/lib/lwip/src/netif/ppp/ppp_impl.h
#core/lib/lwip/src/netif/ppp/md5.h
#core/lib/lwip/src/netif/ppp/auth.h
#core/lib/lwip/ling/lwipopts.h
#core/lib/lwip/ling/lwippools.h
#core/lib/lwip/ling/sys_arch.h
#core/lib/lwip/ling/arch/perf.h
#core/lib/lwip/ling/arch/cc.h
#core/lib/lwip/test/unit/lwipopts.h
#core/lib/lwip/test/unit/tcp/tcp_helper.h
#core/lib/lwip/test/unit/tcp/test_tcp.h
#core/lib/lwip/test/unit/tcp/test_tcp_oos.h
#core/lib/lwip/test/unit/lwip_check.h
#core/lib/lwip/test/unit/etharp/test_etharp.h
#core/lib/lwip/test/unit/dhcp/test_dhcp.h
#core/lib/lwip/test/unit/udp/test_udp.h
#core/lib/lwip/test/unit/core/test_pbuf.h
#core/lib/lwip/test/unit/core/test_mem.h
core/bignum/mpi-types.h
core/bignum/logtab.h
core/bignum/bignum.h
core/bignum/mpi.h
core/bignum/mpi-config.h
    )

LINK_LIBRARIES(${PROJECT_NAME}
    m gmp pthread dl
    )
add_executable(${PROJECT_NAME} ${SRC_LIST})
